[gd_scene load_steps=3 format=3 uid="uid://cy0bceugwqyiy"]

[ext_resource type="Script" path="res://Script/main.gd" id="1_e4vkc"]
[ext_resource type="FontFile" uid="uid://cql3tdxhohtp" path="res://Fonts/BPdots/BPdotsDiamond.otf" id="2_87dfe"]

[node name="Main" type="Node2D"]
script = ExtResource("1_e4vkc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 104.0
offset_top = 80.0
offset_right = 144.0
offset_bottom = 120.0

[node name="Continue" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.0
anchor_top = -1.0
anchor_right = -1.0
anchor_bottom = -1.0
offset_left = 104.0
offset_top = 168.0
offset_right = 296.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("2_87dfe")
theme_override_font_sizes/font_size = 30
text = "Continue
"
flat = true

[node name="New" type="Button" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 256.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("2_87dfe")
theme_override_font_sizes/font_size = 30
text = "New"
flat = true

[node name="Options" type="Button" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 304.0
offset_right = 256.0
offset_bottom = 368.0
theme_override_fonts/font = ExtResource("2_87dfe")
theme_override_font_sizes/font_size = 30
text = "Options"
flat = true

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.6
anchor_top = 3.2
anchor_right = 1.6
anchor_bottom = 3.2
offset_top = 264.0
offset_right = 192.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("2_87dfe")
theme_override_font_sizes/font_size = 30
text = "Quit"
flat = true

[connection signal="pressed" from="Control/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Control/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
